--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -1024,7 +1024,7 @@
 						<div class="group-form mt40">
 							<div class="group-title">
 								<strong class="title-medium">자격증<i class="apos" aria-label="필수 입력">*</i></strong>
-								<p class="description info body-small fc-typography-caption">최대 <span class="fc-status-error">N</span>개 선택할 수 있습니다.</p>
+								<!-- <p class="description info body-small fc-typography-caption">최대 <span class="fc-status-error">N</span>개 선택할 수 있습니다.</p> 삭제됨 2024-12-13 -->
 							</div>
 							<div class="group-content">
 								<div class="inp-column-list">
