--- a/html/PBWCL/PBWCL020000.html
+++ b/html/PBWCL/PBWCL020000.html
@@ -104,8 +104,8 @@
 					<div class="customer-contribution-list content-fluid pt40 px0">
 						<strong class="customer-contribution-title">조회결과</strong>
 
-						<!-- customer-contribution -->
-						<div class="customer-contribution">
+						<!-- box -->
+						<div class="box">
 							<h2 class="headline-small">고객정보</h2>
 							<div class="table-row mt24">
 								<table>
@@ -151,12 +151,12 @@
 								</table>
 							</div>
 						</div>
-						<!-- //customer-contribution -->
+						<!-- //box -->
 
 						<div class="stroke stroke4"></div>
 
-						<!-- customer-contribution -->
-						<div class="customer-contribution">
+						<!-- box -->
+						<div class="box">
 							<h2 class="headline-small">평가지표</h2>
 							<div class="table-row mt24">
 								<table>
@@ -226,12 +226,12 @@
 								</table>
 							</div>
 						</div>
-						<!-- //customer-contribution -->
+						<!-- //box -->
 
 						<div class="stroke stroke4"></div>
 
-						<!-- customer-contribution -->
-						<div class="customer-contribution">
+						<!-- box -->
+						<div class="box">
 							<h2 class="headline-small">운용 평가지표</h2>
 							<div class="table-col mt24">
 								<table>
@@ -273,12 +273,12 @@
 								</table>
 							</div>
 						</div>
-						<!-- //customer-contribution -->
+						<!-- //box -->
 
 						<div class="stroke stroke4"></div>
 
-						<!-- customer-contribution -->
-						<div class="customer-contribution">
+						<!-- box -->
+						<div class="box">
 							<h2 class="headline-small">조달 평가지표</h2>
 							<div class="table-col mt24">
 								<table>
@@ -320,7 +320,7 @@
 								</table>
 							</div>
 						</div>
-						<!-- //customer-contribution -->
+						<!-- //box -->
 
 					</div>
 					<!-- //customer-contribution-list -->
