--- a/html/PBWCL/PBWCL070000_tab01.html
+++ b/html/PBWCL/PBWCL070000_tab01.html
@@ -127,8 +127,8 @@
 
 						<!-- customer-contribution-list -->
 						<div class="customer-contribution-list content-fluid px0">
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">기업 프로필</h2>
 								<div class="table-row mt24">
 									<table>
@@ -186,13 +186,13 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 							<div class="stroke stroke4"></div>
 
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">주요 주주</h2>
 								<div class="caption-visible mt24">(단위: 천원)</div>
 								<div class="table-col">
@@ -221,12 +221,12 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 							<div class="stroke stroke4"></div>
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">종업원 현황</h2>
 								<div class="caption-visible mt24">(단위: 명)</div>
 								<div class="table-col">
@@ -247,12 +247,12 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 							<div class="stroke stroke4"></div>
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">관계회사</h2>
 								<div class="caption-visible mt24">(단위: 천원)</div>
 								<div class="table-col">
@@ -281,12 +281,12 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 							<div class="stroke stroke4"></div>
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">주요 구매처</h2>
 								<div class="caption-visible mt24">(단위: %)</div>
 								<div class="table-col">
@@ -320,7 +320,7 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 						</div>
 						<!-- //customer-contribution-list -->
