--- a/html/PBWCL/PBWCL070000_tab02.html
+++ b/html/PBWCL/PBWCL070000_tab02.html
@@ -127,8 +127,8 @@
 
 						<!-- customer-contribution-list -->
 						<div class="customer-contribution-list content-fluid px0">
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">기업 등급</h2>
 
 								<div class="grade-wrap mt24">
@@ -200,10 +200,10 @@
 								</div>
 
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">기타 신용정보</h2>
 								<div class="caption-visible mt24">(단위: 천원)</div>
 								<div class="table-col">
@@ -236,14 +236,14 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 							<div class="stroke stroke4"></div>
 
 
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">휴폐업 정보</h2>
 								<div class="caption-visible mt24">(단위: 명)</div>
 								<div class="table-col">
@@ -266,7 +266,7 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 						</div>
 						<!-- //customer-contribution-list -->
