--- a/html/PBWCL/PBWCL070000_tab07.html
+++ b/html/PBWCL/PBWCL070000_tab07.html
@@ -128,8 +128,8 @@
 						<!-- customer-contribution-list -->
 						<div class="customer-contribution-list content-fluid px0">
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">구매처</h2>
 								<div class="caption-visible mt24">기준일자 : 2022-08-16</div>
 								<div class="table-col">
@@ -170,12 +170,12 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 							<div class="stroke stroke4"></div>
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">판매처</h2>
 								<div class="caption-visible mt24">기준일자 : 2022-08-16</div>
 								<div class="table-col">
@@ -216,7 +216,7 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 						</div>
 						<!-- //customer-contribution-list -->
