--- a/html/PBWCL/PBWCL070000_tab08.html
+++ b/html/PBWCL/PBWCL070000_tab08.html
@@ -128,8 +128,8 @@
 						<!-- customer-contribution-list -->
 						<div class="customer-contribution-list content-fluid px0">
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">주요주주 현황</h2>
 								<div class="caption-visible mt24">기준일자 : 2022-08-16</div>
 								<div class="table-col content-fluid overflow-visible px0 mx-24">
@@ -194,7 +194,7 @@
 									</table>
 								</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 						</div>
 						<!-- //customer-contribution-list -->
