--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -196,9 +196,9 @@
 						<div class="group-title py16">
 							<strong class="headline-small inner-ico"><i class="ico-keyword bg-yellow-500"></i>추천 키워드</strong>
 						</div>
-						<div class="group-content content-fluid">
+						<div class="group-content content-fluid px0">
 							<!-- tab-content -->
-							<div class="tab-content tab-fluid">
+							<div class="tab-content">
 								<ul class="tab-list tab-col overflow-list px24" role="tablist">
 									<li class="tab tab-active"><a role="tab" href="#" class="fs-18">수익률 Best</a></li>
 									<li class="tab"><a role="tab" href="#" class="fs-18">섹터</a></li>
@@ -268,11 +268,11 @@
 										<span>친환경/탄소중립</span>
 									</button>
 									<button type="button">
-										<i class="flag flag-korea"></i>
+										<i class="flag flag-kr"></i>
 										<span>한국</span>
 									</button>
 									<button type="button">
-										<i class="flag flag-usa"></i>
+										<i class="flag flag-us"></i>
 										<span>미국</span>
 									</button>
 									<button type="button">
@@ -280,19 +280,19 @@
 										<span>유럽</span>
 									</button>
 									<button type="button">
-										<i class="flag flag-japan"></i>
+										<i class="flag flag-jp"></i>
 										<span>일본</span>
 									</button>
 									<button type="button">
-										<i class="flag flag-china"></i>
+										<i class="flag flag-cn"></i>
 										<span>중국</span>
 									</button>
 									<button type="button">
-										<i class="flag flag-india"></i>
+										<i class="flag flag-in"></i>
 										<span>인도</span>
 									</button>
 									<button type="button">
-										<i class="flag flag-vietnam"></i>
+										<i class="flag flag-vn"></i>
 										<span>베트남</span>
 									</button>
 									<button type="button">
