--- a/html/PBWCL/PBWCL070000_tab05.html
+++ b/html/PBWCL/PBWCL070000_tab05.html
@@ -128,15 +128,15 @@
 						<!-- customer-contribution-list -->
 						<div class="customer-contribution-list content-fluid px0">
 
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
+							<!-- box -->
+							<div class="box">
 								<h2 class="headline-small">연혁</h2>
 
 								<p class="body-large mt24">삼성중공업(주)(이하 ‘동사’)는 1974년 8월 설립된 유가증권시장 상장법인으로 유조선, 가스운반선원유시추선외를 주력제품(사업)으로 하는 강선건조업을 영위중이며, 2019년 12월말 현재 총자산 000000000백만원, 자기자본 00000000백만원 이하 텍스트가들어갑니다. 텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다</p>
 
 								<div class="body-caption mt8">(2020년도 1분기 분기보고서 기준)</div>
 							</div>
-							<!-- //customer-contribution -->
+							<!-- //box -->
 
 						</div>
 						<!-- //customer-contribution-list -->
