--- a/html/PBWCL/PBWCL030000.html
+++ b/html/PBWCL/PBWCL030000.html
@@ -104,9 +104,11 @@
 								<button class="select" data-micromodal-trigger="modal-select-list" data-placeholder="선택하세요"><span>기업명</span></button>
 							</div>
 							<div class="form">
+								<div class="label"></div>
 								<div class="input-wrap">
 									<input type="search" placeholder="검색어를 2자 이상 입력해주세요." aria-label="검색대상">
 								</div>
+								<p class="validate-text"></p>
 							</div>
 						</div>
 					</div>
