--- a/html/PBWCL/PBWCL070000_tab06.html
+++ b/html/PBWCL/PBWCL070000_tab06.html
@@ -180,6 +180,11 @@
 												<td>대표이사</td>
 												<td>타인</td>
 											</tr>
+											<tr>
+												<td colspan="5">
+													<p class="description caution body-small d-inflex">조회 데이터가 없습니다.</p>
+												</td>
+											</tr>
 										</tbody>
 									</table>
 								</div>
