--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -98,18 +98,16 @@
 					<div class="sticky-sentinal"></div>
 					<div class="sticky-content content-fluid">
 						<div class="sticky-content-inner">
-							<div class="form-wrap">
-								<!-- form -->
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap input-btn">
-										<input type="search" placeholder="펀드명, 키워드로 검색해 보세요." aria-label="검색">
-										<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
-									</div>
-									<p class="validate-text"></p>
+							<!-- form -->
+							<div class="form">
+								<div class="label"></div>
+								<div class="input-wrap input-btn">
+									<input type="search" placeholder="펀드명으로 검색해 보세요." aria-label="검색">
+									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 								</div>
-								<!-- //form -->
+								<p class="validate-text"></p>
 							</div>
+							<!-- //form -->
 						</div>
 					</div>
 					<!-- //sticky-content -->
@@ -163,8 +161,17 @@
 							<li>
 								<figure>
 									<picture>
-										<source srcset="../../resources/images/PBWMA/ico-fig-list01.svg">
-										<img src="../../resources/images/PBWMA/ico-fig-list01.svg" alt="">
+										<source srcset="../../resources/images/PBWFU/ico-fig-list01.svg">
+										<img src="../../resources/images/PBWFU/ico-fig-list01.svg" alt="">
+									</picture>
+									<figcaption>전체 펀드</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<picture>
+										<source srcset="../../resources/images/PBWFU/ico-fig-list02.svg">
+										<img src="../../resources/images/PBWFU/ico-fig-list02.svg" alt="">
 									</picture>
 									<figcaption>수익률 Best</figcaption>
 								</figure>
@@ -172,8 +179,8 @@
 							<li>
 								<figure>
 									<picture>
-										<source srcset="../../resources/images/PBWMA/ico-fig-list02.svg">
-										<img src="../../resources/images/PBWMA/ico-fig-list02.svg" alt="">
+										<source srcset="../../resources/images/PBWFU/ico-fig-list03.svg">
+										<img src="../../resources/images/PBWFU/ico-fig-list03.svg" alt="">
 									</picture>
 									<figcaption>판매 Best</figcaption>
 								</figure>
@@ -181,8 +188,8 @@
 							<li>
 								<figure>
 									<picture>
-										<source srcset="../../resources/images/PBWMA/ico-fig-list03.svg">
-										<img src="../../resources/images/PBWMA/ico-fig-list03.svg" alt="">
+										<source srcset="../../resources/images/PBWFU/ico-fig-list04.svg">
+										<img src="../../resources/images/PBWFU/ico-fig-list04.svg" alt="">
 									</picture>
 									<figcaption>이달의 추천</figcaption>
 								</figure>
@@ -201,6 +208,7 @@
 							<div class="tab-content">
 								<ul class="tab-list tab-col overflow-list px24" role="tablist">
 									<li class="tab tab-active"><a role="tab" href="#" class="fs-18">수익률 Best</a></li>
+									<li class="tab"><a role="tab" href="#" class="fs-18">키워드</a></li>
 									<li class="tab"><a role="tab" href="#" class="fs-18">섹터</a></li>
 									<li class="tab"><a role="tab" href="#" class="fs-18">국가</a></li>
 								</ul>
