--- a/html/PBWFI/PBWFI050000.html
+++ b/html/PBWFI/PBWFI050000.html
@@ -100,7 +100,7 @@
 						<div class="input-wrap input-datepicker">
 							<button type="button" aria-label="날짜 선택" id="modal-datepicker-trigger"></button>
 						</div>
-						<ul class="label-list px12 py8 j-between">
+						<ul class="label-list px12 py8 mt8">
 							<li class="list01"><i aria-label="매매기준율"></i></li>
 							<li class="list02"><i aria-label="본지점매도율"></i></li>
 							<li class="list03"><i aria-label="본지점매입율"></i></li>
