--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -159,40 +159,48 @@
 					<div class="figure-list py16">
 						<ul>
 							<li>
-								<figure>
-									<picture>
-										<source srcset="../../resources/images/PBWFU/ico-fig-list01.svg">
-										<img src="../../resources/images/PBWFU/ico-fig-list01.svg" alt="">
-									</picture>
-									<figcaption>전체 펀드</figcaption>
-								</figure>
+								<a href="#">
+									<figure>
+										<picture>
+											<source srcset="../../resources/images/PBWFU/ico-fig-list01.svg">
+											<img src="../../resources/images/PBWFU/ico-fig-list01.svg" alt="">
+										</picture>
+										<figcaption>전체 펀드</figcaption>
+									</figure>
+								</a>
 							</li>
 							<li>
-								<figure>
-									<picture>
-										<source srcset="../../resources/images/PBWFU/ico-fig-list02.svg">
-										<img src="../../resources/images/PBWFU/ico-fig-list02.svg" alt="">
-									</picture>
-									<figcaption>수익률 Best</figcaption>
-								</figure>
+								<a href="#">
+									<figure>
+										<picture>
+											<source srcset="../../resources/images/PBWFU/ico-fig-list02.svg">
+											<img src="../../resources/images/PBWFU/ico-fig-list02.svg" alt="">
+										</picture>
+										<figcaption>수익률 Best</figcaption>
+									</figure>
+								</a>
 							</li>
 							<li>
-								<figure>
-									<picture>
-										<source srcset="../../resources/images/PBWFU/ico-fig-list03.svg">
-										<img src="../../resources/images/PBWFU/ico-fig-list03.svg" alt="">
-									</picture>
-									<figcaption>판매 Best</figcaption>
-								</figure>
+								<a href="#">
+									<figure>
+										<picture>
+											<source srcset="../../resources/images/PBWFU/ico-fig-list03.svg">
+											<img src="../../resources/images/PBWFU/ico-fig-list03.svg" alt="">
+										</picture>
+										<figcaption>판매 Best</figcaption>
+									</figure>
+								</a>
 							</li>
 							<li>
-								<figure>
-									<picture>
-										<source srcset="../../resources/images/PBWFU/ico-fig-list04.svg">
-										<img src="../../resources/images/PBWFU/ico-fig-list04.svg" alt="">
-									</picture>
-									<figcaption>이달의 추천</figcaption>
-								</figure>
+								<a href="#">
+									<figure>
+										<picture>
+											<source srcset="../../resources/images/PBWFU/ico-fig-list04.svg">
+											<img src="../../resources/images/PBWFU/ico-fig-list04.svg" alt="">
+										</picture>
+										<figcaption>이달의 추천</figcaption>
+									</figure>
+								</a>
 							</li>
 						</ul>
 					</div>
