--- a/html/PBWFU/PBWFU030000.html
+++ b/html/PBWFU/PBWFU030000.html
@@ -74,7 +74,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>펀드 찾기 </h1>
+					<h1>수익률 BEST</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="관심 펀드"><i class="i-favorite"></i></button>
@@ -100,48 +100,11 @@
 						}
 					</style>
 
-					<!-- sticky-content -->
-					<div class="sticky-sentinal"></div>
-					<div class="sticky-content content-fluid">
-						<div class="sticky-content-inner">
-							<!-- form -->
-							<div class="form">
-								<div class="label"></div>
-								<div class="input-wrap input-btn">
-									<input type="search" placeholder="펀드명, 키워드로 검색해 보세요." aria-label="검색">
-									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
-								</div>
-								<p class="validate-text"></p>
-							</div>
-							<!-- //form -->
-						</div>
-					</div>
-					<!-- //sticky-content -->
-
 					<div class="fund-result">
-						<strong class="result-title"><span>’888’</span> 건의 검색결과</strong>
-
-						<!-- sort-wrap -->
-						<div class="sort-wrap py0 my24">
-
-							<!-- sort-list -->
-							<button class="sort-list mrauto" data-micromodal-trigger="modal-select-filter" aria-label="정렬">
-								<span class="filter">
-									<span>전체</span>
-									<i class="badge ml0">3</i>
-								</span>
-								<span class="division mx8"></span>
-								<span class="sort">최신순</span>
-							</button>
-							<!-- sort-list -->
-
-						</div>
-						<!-- sort-wrap -->
 
 						<!-- fund-card-list -->
-						<div class="fund-card-list mt24">
+						<div class="fund-card-list">
 							<div class="fund-card" data-toggle="toggle-wrap" data-aos>
-								<div class="clip clip-recommend">추천</div>
 								<div class="tag-wrap">
 									<div class="tags tags-small tags-lightRed">#매우높은위험</div>
 									<div class="tags tags-small tags-FFF4EB">#높은위험</div>
@@ -199,7 +162,6 @@
 
 							</div>
 							<div class="fund-card" data-toggle="toggle-wrap" data-aos>
-								<div class="clip clip-recommend">추천</div>
 								<div class="tag-wrap">
 									<div class="tags tags-small tags-lightRed">#높은위험</div>
 									<div class="tags tags-small tags-lightYellow">#원금손실가능</div>
@@ -298,29 +260,6 @@
 
 
 
-						<!-- group-form -->
-						<div class="group-form">
-							<div class="group-title py16 px8">
-								<strong class="title-large px0">정렬</strong>
-							</div>
-							<div class="group-content mt0">
-								<div class="inp-group">
-									<div class="inp inp-medium">
-										<label>
-											<input type="radio" name="rad001">
-											<span class="label-title">수익률순</span>
-										</label>
-									</div>
-									<div class="inp inp-medium">
-										<label>
-											<input type="radio" name="rad001">
-											<span class="label-title">판매순</span>
-										</label>
-									</div>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
 
 						<!-- group-form -->
 						<div class="group-form mt16">
@@ -351,31 +290,6 @@
 										<label>
 											<input type="radio" name="rad001">
 											<span class="label-title">12개월</span>
-										</label>
-									</div>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt16">
-							<div class="group-title py16 px8">
-								<strong class="title-large px0">필터</strong>
-							</div>
-							<div class="group-content mt0">
-
-								<div class="inp-group">
-									<div class="inp inp-medium">
-										<label>
-											<input type="radio" name="rad003">
-											<span class="label-title">전체</span>
-										</label>
-									</div>
-									<div class="inp inp-medium">
-										<label>
-											<input type="radio" name="rad003">
-											<span class="label-title">추천펀드</span>
 										</label>
 									</div>
 								</div>
