--- a/html/PBWFU/PBWFU010000.html
+++ b/html/PBWFU/PBWFU010000.html
@@ -109,6 +109,7 @@
 							<button class="sort-list" data-micromodal-trigger="modal-select-filter" aria-label="정렬">
 								<span class="filter">
 									<span class="sort">3개월</span>
+								</span>
 							</button>
 							<!-- sort-list -->
 
