--- a/html/PBWCL/PBWCL070000_tab06.html
+++ b/html/PBWCL/PBWCL070000_tab06.html
@@ -182,7 +182,7 @@
 											</tr>
 											<tr>
 												<td colspan="5">
-													<p class="description caution body-small d-inflex">조회 데이터가 없습니다.</p>
+													<p class="description caution body-small d-inflex">내용이 없습니다.</p>
 												</td>
 											</tr>
 										</tbody>
