--- a/html/index.html
+++ b/html/index.html
@@ -670,8 +670,6 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWFU030000</a></td>
 						<td></td>
 					</tr>
-
-
 					<tr>
 						<td></td>
 						<td></td>
@@ -681,6 +679,16 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWFU040000</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>펀드 커뮤니티</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFU050000</a></td>
+						<td></td>
+					</tr>
+
 				</tbody>
 				<tbody data-folder="PBWCL">
 					<tr>
