--- a/html/PBWFU/PBWFU050000.html
+++ b/html/PBWFU/PBWFU050000.html
@@ -117,7 +117,7 @@
 					<div class="sort-wrap py16">
 
 						<!-- sort-list -->
-						<button class="sort-list" data-micromodal-trigger="modal-select-filter" aria-label="정렬">
+						<button class="sort-list" data-micromodal-trigger="modal-myinfo">
 							<span class="filter">
 								<span class="sort">내 정보관리</span>
 							</span>
@@ -127,18 +127,24 @@
 
 					<div class="community-wrap">
 						<ul class="dep01">
+
 							<li>
+								<!-- comment-wrap -->
 								<div class="comment-wrap">
 									<div class="comment-user">
-										<div class="avartar avartar01"></div>
-										<strong class="name">나우리</strong>
-										<span class="date">2024-12-17 16:33:51</span>
-										<button type="button" class="btn-more" data-micromodal-trigger="modal-edit" aria-label="수정 및 삭제"></button>
-									</div>
-									<div class="divide-list">
-										<span>서울디지털프리미엄금융센터</span>
-										<div class="division h14 mx8"></div>
-										<span>개인금융1팀</span>
+										<div class="comment-user-profile">
+											<div class="avartar avartar01"></div>
+											<strong class="name">나우리</strong>
+										</div>
+										<div class="comment-user-info">
+											<div class="divide-list">
+												<span>서울디지털프리미엄금융센터</span>
+												<div class="division h14 mx8"></div>
+												<span>개인금융1팀</span>
+											</div>
+											<span class="date">2024-12-17 16:33:51</span>
+											<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
+										</div>
 									</div>
 									<div class="comment-desc" data-toggle="toggle-wrap">
 										<div class="comment-desc-inner">
@@ -153,31 +159,37 @@
 									</div>
 									<div class="comment-btn-wrap" data-toggle="toggle-wrap">
 										<div class="left">
-											<button type="button" data-toggle="toggle-trigger">
+											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
 												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
 												<span class="toggle-off blind">좋아요</span>
 												<span class="toggle-on blind">좋아요 해제</span>
 												120
 											</button>
-											<button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button>
 										</div>
+										<div class="right"><button type="button" class="btn-noborder" data-micromodal-trigger="modal-reply-write"><i class="ico-reply"></i>답글</button></div>
 									</div>
 								</div>
+								<!-- comment-wrap -->
+
+								<!-- dep02 -->
 								<ul class="dep02">
 									<li>
+										<!-- comment-wrap -->
 										<div class="comment-wrap">
-											<div class="comment-user">
+											<div class="comment-user-profile">
 												<div class="avartar avartar01"></div>
 												<strong class="name">나우리</strong>
+											</div>
+											<div class="comment-user-info">
+												<div class="divide-list">
+													<span>서울디지털프리미엄금융센터</span>
+													<div class="division h14 mx8"></div>
+													<span>개인금융1팀</span>
+												</div>
 												<span class="date">2024-12-17 16:33:51</span>
-												<button type="button" class="btn-more" data-micromodal-trigger="modal-edit" aria-label="수정 및 삭제"></button>
+												<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
 											</div>
-											<div class="divide-list">
-												<span>부서명</span>
-												<div class="division h14 mx8"></div>
-												<span>부서명</span>
-											</div>
-											<div class="commentto">@나우리</div>
+											<div class="tags tags-small tags-lightBlue">@나우리</div>
 											<div class="comment-desc" data-toggle="toggle-wrap">
 												<div class="comment-desc-inner">
 													<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
@@ -191,18 +203,152 @@
 											</div>
 											<div class="comment-btn-wrap" data-toggle="toggle-wrap">
 												<div class="left">
-													<button type="button" data-toggle="toggle-trigger">
+													<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
 														<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
 														<span class="toggle-off blind">좋아요</span>
 														<span class="toggle-on blind">좋아요 해제</span>
 														120
 													</button>
-													<button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button>
 												</div>
+												<div class="right"><button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button></div>
 											</div>
 										</div>
+										<!-- //comment-wrap -->
+
+									</li>
+
+									<li>
+										<!-- comment-wrap -->
+										<div class="comment-wrap">
+											<div class="comment-user-profile">
+												<div class="avartar avartar01"></div>
+												<strong class="name">나우리</strong>
+											</div>
+											<div class="comment-user-info">
+												<div class="divide-list">
+													<span>서울디지털프리미엄금융센터</span>
+													<div class="division h14 mx8"></div>
+													<span>개인금융1팀</span>
+												</div>
+												<span class="date">2024-12-17 16:33:51</span>
+												<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
+											</div>
+											<div class="tags tags-small tags-lightBlue">@나우리</div>
+											<div class="comment-desc" data-toggle="toggle-wrap">
+												<div class="comment-desc-inner">
+													<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+												</div>
+												<div class="comment-toggle-wrap">
+													<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+														<span class="toggle-off">더보기</span>
+														<span class="toggle-on">접기</span>
+													</button>
+												</div>
+											</div>
+											<div class="comment-btn-wrap" data-toggle="toggle-wrap">
+												<div class="left">
+													<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
+														<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
+														<span class="toggle-off blind">좋아요</span>
+														<span class="toggle-on blind">좋아요 해제</span>
+														120
+													</button>
+												</div>
+												<div class="right"><button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button></div>
+											</div>
+										</div>
+										<!-- //comment-wrap -->
+
 									</li>
 								</ul>
+								<!-- dep02 -->
+
+							</li>
+							<li>
+
+								<!-- comment-wrap -->
+								<div class="comment-wrap">
+									<div class="comment-user-profile">
+										<div class="avartar avartar01"></div>
+										<strong class="name">나우리</strong>
+									</div>
+									<div class="comment-user-info">
+										<div class="divide-list">
+											<span>서울디지털프리미엄금융센터</span>
+											<div class="division h14 mx8"></div>
+											<span>개인금융1팀</span>
+										</div>
+										<span class="date">2024-12-17 16:33:51</span>
+										<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
+									</div>
+									<div class="comment-desc" data-toggle="toggle-wrap">
+										<div class="comment-desc-inner">
+											<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+										</div>
+										<div class="comment-toggle-wrap">
+											<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+												<span class="toggle-off">더보기</span>
+												<span class="toggle-on">접기</span>
+											</button>
+										</div>
+									</div>
+									<div class="comment-btn-wrap" data-toggle="toggle-wrap">
+										<div class="left">
+											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
+												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
+												<span class="toggle-off blind">좋아요</span>
+												<span class="toggle-on blind">좋아요 해제</span>
+												120
+											</button>
+										</div>
+										<div class="right"><button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button></div>
+									</div>
+								</div>
+								<!-- comment-wrap -->
+
+							</li>
+							<li>
+
+								<!-- comment-wrap -->
+								<div class="comment-wrap">
+									<div class="comment-user-profile">
+										<div class="avartar avartar01"></div>
+										<strong class="name">나우리</strong>
+									</div>
+									<div class="comment-user-info">
+										<div class="divide-list">
+											<span>서울디지털프리미엄금융센터</span>
+											<div class="division h14 mx8"></div>
+											<span>개인금융1팀</span>
+										</div>
+										<span class="date">2024-12-17 16:33:51</span>
+										<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
+									</div>
+									<div class="comment-desc" data-toggle="toggle-wrap">
+										<div class="comment-desc-inner">
+											<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+										</div>
+										<div class="comment-toggle-wrap">
+											<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+												<span class="toggle-off">더보기</span>
+												<span class="toggle-on">접기</span>
+											</button>
+										</div>
+									</div>
+									<div class="comment-btn-wrap" data-toggle="toggle-wrap">
+										<div class="left">
+											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
+												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
+												<span class="toggle-off blind">좋아요</span>
+												<span class="toggle-on blind">좋아요 해제</span>
+												120
+											</button>
+										</div>
+										<div class="right"><button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button></div>
+									</div>
+								</div>
+								<!-- comment-wrap -->
+
 							</li>
 						</ul>
 					</div>
@@ -217,13 +363,189 @@
 		<!-- //container -->
 
 
-		</div>
 		<!-- //content end -->
 		<!-- //main-inner -->
 
 
 	</main>
 	<!-- //main -->
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-myinfo">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large">내 정보 관리</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+					<div class="content pt16">
+
+						<!-- group-form -->
+						<div class="group-form">
+							<div class="group-title">
+								<strong class="title-medium">아바타</strong>
+							</div>
+							<div class="group-content">
+								<div class="inp-image">
+									<div class="inp">
+										<label>
+											<input type="radio" name="radimg" class="blind">
+											<picture>
+												<source srcset="../../resources/images/avatar/profile_type1.svg">
+												<img src="../../resources/images/avatar/profile_type1.svg" alt="위비">
+											</picture>
+										</label>
+									</div>
+									<div class="inp">
+										<label>
+											<input type="radio" name="radimg" class="blind">
+											<picture>
+												<source srcset="../../resources/images/avatar/profile_type2.svg">
+												<img src="../../resources/images/avatar/profile_type2.svg" alt="쿠">
+											</picture>
+										</label>
+									</div>
+									<div class="inp">
+										<label>
+											<input type="radio" name="radimg" class="blind">
+											<picture>
+												<source srcset="../../resources/images/avatar/profile_type3.svg">
+												<img src="../../resources/images/avatar/profile_type3.svg" alt="푸딩">
+											</picture>
+										</label>
+									</div>
+									<div class="inp">
+										<label>
+											<input type="radio" name="radimg" class="blind">
+											<picture>
+												<source srcset="../../resources/images/avatar/profile_type4.svg">
+												<img src="../../resources/images/avatar/profile_type4.svg" alt="두지">
+											</picture>
+										</label>
+									</div>
+									<div class="inp">
+										<label>
+											<input type="radio" name="radimg" class="blind">
+											<picture>
+												<source srcset="../../resources/images/avatar/profile_type5.svg">
+												<img src="../../resources/images/avatar/profile_type5.svg" alt="달보">
+											</picture>
+										</label>
+									</div>
+									<div class="inp">
+										<label>
+											<input type="radio" name="radimg" class="blind">
+											<picture>
+												<source srcset="../../resources/images/avatar/profile_type6.svg">
+												<img src="../../resources/images/avatar/profile_type6.svg" alt="봄봄">
+											</picture>
+										</label>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt24">
+							<div class="group-title">
+								<strong class="title-medium">닉네임 <i class="apos" aria-label="필수 입력">*</i></strong>
+								<div class="body-caption fs-15">0/8자</div>
+							</div>
+							<div class="group-content">
+								<div class="form">
+									<div class="label"></div>
+									<div class="input-wrap">
+										<input type="search" placeholder="한글과 영문, 숫자만 입력해주세요." aria-label="닉네임">
+									</div>
+									<p class="validate-text"></p>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+					</div>
+				</div>
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-reply-write">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large">메모</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+					<div class="content pt16">
+
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox">
+								<span class="label-title">닉네임명</span>
+							</label>
+						</div>
+
+						<div class="form mt10">
+							<div class="input-wrap">
+								<textarea aria-label="메모"></textarea>
+							</div>
+							<div class="textarea-length">
+								<div class="left">0/500자</div>
+								<div class="right">
+									<button type="button" class="btn-xsmall btn-primary btn-round">저장</button>
+								</div>
+							</div>
+						</div>
+
+						<p class="description error body-small mt10 fc-typography-caption">펀드에 대한 정보 및 영업 비법 등을 직원들과 자유롭게 나누는 공간입니다.</p>
+						<p class="description error body-small mt10 fc-typography-caption">게시판 취지에 맞지 않는 글&middot;댓글(단순불만, 민감한 주제, 위화감을 주는 글)은 삭제될 수 있습니다.</p>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-dropdown modal" id="modal-dropdown-list">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header modal__header__alert">
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close=""></button>
+				</div>
+				<div class="modal__content">
+					<div class="content content-fluid pb0">
+						<div class="dropdown-option">
+							<ul>
+								<li><button type="button"><i class="ico-reply"></i>수정</button></li>
+								<li><button type="button"><i class="ico-delete"></i>삭제</button></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
 
 
 
