--- a/html/index.html
+++ b/html/index.html
@@ -149,7 +149,15 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_datepicker</a></td>
 						<td></td>
 					</tr>
-
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Dropdown</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_dropdown</a></td>
+						<td></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
